[gd_scene load_steps=15 format=3 uid="uid://doff46k4uoih1"]

[ext_resource type="Script" path="res://scripts/Main.gd" id="1_dq3mh"]
[ext_resource type="PackedScene" uid="uid://ce6ljqhajwd3d" path="res://Platform.tscn" id="1_kcor8"]
[ext_resource type="PackedScene" uid="uid://duit2rxcu1nbh" path="res://Player.tscn" id="2_53gng"]
[ext_resource type="PackedScene" uid="uid://i4twyrg4404n" path="res://Normie.tscn" id="2_xxisi"]
[ext_resource type="Script" path="res://scripts/Restart.gd" id="3_gph3u"]
[ext_resource type="FontFile" uid="uid://c3akcqflmmpxk" path="res://assets/fonts/FiraCodeNerdFont-Medium.ttf" id="4_bbih8"]

[sub_resource type="FontFile" id="FontFile_gcepb"]
fallbacks = Array[Font]([ExtResource("4_bbih8")])
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/4/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/5/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/6/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/7/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/64/0 = Vector2(0, 0)
cache/0/2/0/ascent = 0.0
cache/0/2/0/descent = 0.0
cache/0/2/0/underline_position = 0.0
cache/0/2/0/underline_thickness = 0.0
cache/0/2/0/scale = 1.0
cache/0/2/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/2/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/2/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/2/0/kerning_overrides/4/0 = Vector2(0, 0)
cache/0/2/0/kerning_overrides/5/0 = Vector2(0, 0)
cache/0/2/0/kerning_overrides/6/0 = Vector2(0, 0)
cache/0/2/0/kerning_overrides/7/0 = Vector2(0, 0)
cache/0/2/0/kerning_overrides/64/0 = Vector2(0, 0)
cache/0/3/0/ascent = 0.0
cache/0/3/0/descent = 0.0
cache/0/3/0/underline_position = 0.0
cache/0/3/0/underline_thickness = 0.0
cache/0/3/0/scale = 1.0
cache/0/3/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/3/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/3/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/3/0/kerning_overrides/4/0 = Vector2(0, 0)
cache/0/3/0/kerning_overrides/5/0 = Vector2(0, 0)
cache/0/3/0/kerning_overrides/6/0 = Vector2(0, 0)
cache/0/3/0/kerning_overrides/7/0 = Vector2(0, 0)
cache/0/3/0/kerning_overrides/64/0 = Vector2(0, 0)
cache/0/4/0/ascent = 0.0
cache/0/4/0/descent = 0.0
cache/0/4/0/underline_position = 0.0
cache/0/4/0/underline_thickness = 0.0
cache/0/4/0/scale = 1.0
cache/0/4/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/4/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/4/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/4/0/kerning_overrides/4/0 = Vector2(0, 0)
cache/0/4/0/kerning_overrides/5/0 = Vector2(0, 0)
cache/0/4/0/kerning_overrides/6/0 = Vector2(0, 0)
cache/0/4/0/kerning_overrides/7/0 = Vector2(0, 0)
cache/0/4/0/kerning_overrides/64/0 = Vector2(0, 0)
cache/0/5/0/ascent = 0.0
cache/0/5/0/descent = 0.0
cache/0/5/0/underline_position = 0.0
cache/0/5/0/underline_thickness = 0.0
cache/0/5/0/scale = 1.0
cache/0/5/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/5/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/5/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/5/0/kerning_overrides/4/0 = Vector2(0, 0)
cache/0/5/0/kerning_overrides/5/0 = Vector2(0, 0)
cache/0/5/0/kerning_overrides/6/0 = Vector2(0, 0)
cache/0/5/0/kerning_overrides/7/0 = Vector2(0, 0)
cache/0/5/0/kerning_overrides/64/0 = Vector2(0, 0)
cache/0/6/0/ascent = 0.0
cache/0/6/0/descent = 0.0
cache/0/6/0/underline_position = 0.0
cache/0/6/0/underline_thickness = 0.0
cache/0/6/0/scale = 1.0
cache/0/6/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/6/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/6/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/6/0/kerning_overrides/4/0 = Vector2(0, 0)
cache/0/6/0/kerning_overrides/5/0 = Vector2(0, 0)
cache/0/6/0/kerning_overrides/6/0 = Vector2(0, 0)
cache/0/6/0/kerning_overrides/7/0 = Vector2(0, 0)
cache/0/6/0/kerning_overrides/64/0 = Vector2(0, 0)
cache/0/7/0/ascent = 0.0
cache/0/7/0/descent = 0.0
cache/0/7/0/underline_position = 0.0
cache/0/7/0/underline_thickness = 0.0
cache/0/7/0/scale = 1.0
cache/0/7/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/7/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/7/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/7/0/kerning_overrides/4/0 = Vector2(0, 0)
cache/0/7/0/kerning_overrides/5/0 = Vector2(0, 0)
cache/0/7/0/kerning_overrides/6/0 = Vector2(0, 0)
cache/0/7/0/kerning_overrides/7/0 = Vector2(0, 0)
cache/0/7/0/kerning_overrides/64/0 = Vector2(0, 0)
cache/0/64/0/ascent = 0.0
cache/0/64/0/descent = 0.0
cache/0/64/0/underline_position = 0.0
cache/0/64/0/underline_thickness = 0.0
cache/0/64/0/scale = 1.0
cache/0/64/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/64/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/64/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/64/0/kerning_overrides/4/0 = Vector2(0, 0)
cache/0/64/0/kerning_overrides/5/0 = Vector2(0, 0)
cache/0/64/0/kerning_overrides/6/0 = Vector2(0, 0)
cache/0/64/0/kerning_overrides/7/0 = Vector2(0, 0)
cache/0/64/0/kerning_overrides/64/0 = Vector2(0, 0)

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_ikndc"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_iaocm"]
sky_material = SubResource("ProceduralSkyMaterial_ikndc")

[sub_resource type="Environment" id="Environment_vdfno"]
background_mode = 2
sky = SubResource("Sky_iaocm")
tonemap_mode = 2

[sub_resource type="Curve3D" id="Curve3D_nb6pc"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, -45.02, 0, -44.9621, 0, 0, 0, 0, 0, 0, 44.7885, 0, -45.1936, 0, 0, 0, 0, 0, 0, 45.0869, 0, 45.1544, 0, 0, 0, 0, 0, 0, -45.0869, 0, 45.4243, 0, 0, 0, 0, 0, 0, -45.02, 0, -44.9621),
"tilts": PackedFloat32Array(0, 0, 0, 0, 0)
}
point_count = 5

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_vm5ww"]
albedo_color = Color(0.247059, 0.247059, 0.247059, 1)
metallic = 0.4

[sub_resource type="BoxMesh" id="BoxMesh_rdpfr"]
material = SubResource("StandardMaterial3D_vm5ww")
size = Vector3(100, 400, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_tmjuq"]
size = Vector3(100, 400, 1)

[node name="level2" type="Node3D"]
script = ExtResource("1_dq3mh")
enemy_scene = ExtResource("2_xxisi")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_gph3u")

[node name="Restart" type="ColorRect" parent="UI"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.572549, 0.572549, 0.572549, 1)

[node name="Label" type="Label" parent="UI/Restart"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -429.0
offset_top = -40.0
offset_right = 429.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("FontFile_gcepb")
theme_override_font_sizes/font_size = 64
text = "Press Enter To Restart"

[node name="WaveTimer" type="Timer" parent="."]
wait_time = 21.0
one_shot = true
autostart = true

[node name="EnemySpawnTimer" type="Timer" parent="WaveTimer"]
wait_time = 2.0
autostart = true

[node name="Platform" parent="." instance=ExtResource("1_kcor8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -50, 0)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_vdfno")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.276342, -4.20092e-08, 0.961059, -0.961059, -1.20793e-08, 0.276342, 0, -1, -4.37114e-08, 0, 50, 0)
sky_mode = 1

[node name="Player" parent="." instance=ExtResource("2_53gng")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -49, 0)

[node name="EnemySpawnPath" type="Path3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -50, 0)
curve = SubResource("Curve3D_nb6pc")

[node name="EnemySpawnLocation" type="PathFollow3D" parent="EnemySpawnPath"]
transform = Transform3D(0.00257774, 0, -0.999997, 0, 1, 0, 0.999997, 0, 0.00257774, -45.02, 0, -44.9621)

[node name="ElevatorWalls" type="Node" parent="."]

[node name="StaticBody3D" type="StaticBody3D" parent="ElevatorWalls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -150, 50.5)

[node name="MeshInstance3D" type="MeshInstance3D" parent="ElevatorWalls/StaticBody3D"]
mesh = SubResource("BoxMesh_rdpfr")

[node name="CollisionShape3D" type="CollisionShape3D" parent="ElevatorWalls/StaticBody3D"]
shape = SubResource("BoxShape3D_tmjuq")

[node name="StaticBody3D2" type="StaticBody3D" parent="ElevatorWalls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -150, -50.5)

[node name="MeshInstance3D" type="MeshInstance3D" parent="ElevatorWalls/StaticBody3D2"]
mesh = SubResource("BoxMesh_rdpfr")

[node name="CollisionShape3D" type="CollisionShape3D" parent="ElevatorWalls/StaticBody3D2"]
shape = SubResource("BoxShape3D_tmjuq")

[node name="StaticBody3D3" type="StaticBody3D" parent="ElevatorWalls"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 50.5, -150, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="ElevatorWalls/StaticBody3D3"]
mesh = SubResource("BoxMesh_rdpfr")

[node name="CollisionShape3D" type="CollisionShape3D" parent="ElevatorWalls/StaticBody3D3"]
shape = SubResource("BoxShape3D_tmjuq")

[node name="StaticBody3D4" type="StaticBody3D" parent="ElevatorWalls"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -50.5, -150, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="ElevatorWalls/StaticBody3D4"]
mesh = SubResource("BoxMesh_rdpfr")

[node name="CollisionShape3D" type="CollisionShape3D" parent="ElevatorWalls/StaticBody3D4"]
shape = SubResource("BoxShape3D_tmjuq")
